# ollama-agent

./: Cargo.toml  LICENSE  PKGBUILD  Readme.md  test_file.txt  test_interactive.sh
src/: api_models.rs  cli.rs  client.rs  main.rs  session.rs  workspace.rs
src/input/: mod.rs  vim_handler.rs
src/tools/: advanced.rs  api.rs  assist.rs  async_executor.rs  config.rs  core.rs  database.rs  database_api.rs  discovery.rs  docker.rs  enhanced.rs  enhanced_errors.rs  enhanced_web.rs  enhanced_websearch.rs  errors.rs  executor.rs  git.rs  history.rs  logging.rs  mod.rs  model_config.rs  package.rs  package_management.rs  parser.rs  permissions.rs  search.rs  system.rs  test.rs  text.rs  web_api_testing.rs  web_search.rs
