[package]
name = "ollama-agent"
version = "0.1.0"
edition = "2021"      # Changed from "2024" which doesn't exist

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
console = "0.16.0"
dialoguer = "0.11.0"
futures = "0.3.31"
indicatif = "0.18.0"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
termimad = "0.23"
walkdir = "2.3"
regex = "1.9"
scraper = "0.17"
url = "2.4"
urlencoding = "2.1"
