[package]
name = "ollama-cli-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and UI
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
console = { version = "0.16.0", features = ["windows-console-colors"] }
dialoguer = "0.11.0"
indicatif = "0.18.0"
termimad = "0.23"
tabled = "0.20.0"

# Async runtime and utilities
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"

# HTTP client and web
reqwest = { version = "0.12.22", features = ["json", "stream"] }
url = "2.4"
urlencoding = "2.1"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Web scraping and HTML parsing
scraper = "0.17"

# Text processing and regex
regex = "1.11"
csv = "1.3"

# Fuzzy searching and globbing
fuzzy-matcher = "0.3"
globset = "0.4"

# File system operations
walkdir = "2.5"

# System information
hostname = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Global state management
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Optional features for enhanced functionality
# Uncomment these for full database support
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
# tokio-postgres = "0.7"
# mysql_async = "0.32"

# Uncomment for enhanced hashing
# sha2 = "0.10"
# md5 = "0.7"
# base64 = "0.21"

# Uncomment for enhanced JSON processing
# jsonpath_lib = "0.3"
# jq-rs = "0.4"

# Optional: Enhanced scheduling
# cron = "0.12"
# tokio-cron-scheduler = "0.9"

# Optional: Configuration management
# config = "0.13"
# toml = "0.8"

# Optional: Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["basic"]
basic = []
full = ["database", "scheduling", "enhanced-crypto"]
database = []
scheduling = []
enhanced-crypto = []

[[bin]]
name = "ollama-cli-assistant"
path = "src/main.rs"
# test comment
# another test
